fix spacing

--- a/css/cv.css
+++ b/css/cv.css
@@ -51,13 +51,13 @@ html {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-evenly;
 	width: 100vw;
 	flex-grow: 1;
 }
 .exp-item {
 	padding: 20px;
-	height: 150px;
+	height: 100px;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
@@ -110,6 +110,10 @@ html {
 }
 
 @media only screen and (max-width: 900px) and (min-width: 601px) {
+	html {
+		overflow-y:scroll;
+		overflow-x:hidden;
+	}
 	#job span {
 		font-size: 40pt;
 	}
@@ -119,6 +123,9 @@ html {
 }
 
 @media only screen and (max-width: 600px) {
+	html {
+	overflow-y:scroll;
+	}
 	#job span {
 		font-size: 26pt;
 	}
